# 2022-CPL-codes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.c
codes-in-class/: CMakeLists.txt
codes-in-class/class-2/: CMakeLists.txt  leap-year.c  min-of-set.c  min.c
codes-in-homework/: CMakeLists.txt
codes-in-homework/HW-1/: ASCII.c  CMakeLists.txt  Equation.c  Gravity.c  Inverse.c  Julian.c  Pi.c  Time.c  change.c
codes-in-homework/HW-2/: CMakeLists.txt  Inverse2.c  collatz.c  factorial.c  obstacle.c  series.c  single.c
